--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,4 +8,4 @@ deploy:
     - s3cmd --config=s3cfg sync -v . s3://$S3_BUCKET/$CI_PROJECT_NAME/
     - echo "Deployment successful"
   only:
-    - master
+    - main
